@@ -3,6 +3,7 @@
 == Master (for 0.0.3)
 * Add -O (--outline-selflink) option.
 * Modify example/Rakefile not depend of *.html on directories.
+* <HTML> header to <html> in HtmlGenerator.generate 
 
 == Version 0.0.2 [2015-10-20]
 * Add -C (--charset) option and default encoding is set to be 'us-ascii'
